Fix compilation warnings (#1008)
This fix resolves warnings that appear when building OpenJCEPlus related
to deprecated and missing constructors, as well as deprecated default
values used in instantiation.

Signed-off-by: Sabrina Lee <sabrinalee@ibm.com>
Co-authored-by: Sabrina Lee <sabrinalee@ibm.com>